syntax = "proto3";

package aptcaller.aptcaller;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "aptcaller/aptcaller/params.proto";
import "aptcaller/aptcaller/apt_res.proto";

option go_package = "aptcaller/x/aptcaller/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/params";
  
  }
  
  // Queries a list of GetAccount items.
  rpc GetAccount (QueryGetAccountRequest) returns (QueryGetAccountResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_account/{header}/{address}";
  
  }
  
  // Queries a list of GetAccountResources items.
  rpc GetAccountResources (QueryGetAccountResourcesRequest) returns (QueryGetAccountResourcesResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_account_resources/{header}/{address}/{ledgerVersion}/{limit}/{start}";
  
  }
  
  // Queries a list of GetAccountModules items.
  rpc GetAccountModules (QueryGetAccountModulesRequest) returns (QueryGetAccountModulesResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_account_modules/{header}/{address}/{ledgerVersion}/{limit}/{start}";
  
  }
  
  // Queries a list of GetAccountResource items.
  rpc GetAccountResource (QueryGetAccountResourceRequest) returns (QueryGetAccountResourceResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_account_resource/{header}/{address}/{resourceType}";
  
  }
  
  // Queries a list of GetAccountModule items.
  rpc GetAccountModule (QueryGetAccountModuleRequest) returns (QueryGetAccountModuleResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_account_module/{header}/{address}/{moduleName}/{ledgerVersion}";
  
  }
  
  // Queries a list of GetBlockByHeight items.
  rpc GetBlockByHeight (QueryGetBlockByHeightRequest) returns (QueryGetBlockByHeightResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_block_by_height/{header}/{blockHeight}/{withTransactions}";
  
  }
  
  // Queries a list of GetBlockByVersion items.
  rpc GetBlockByVersion (QueryGetBlockByVersionRequest) returns (QueryGetBlockByVersionResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_block_by_version/{header}/{version}/{withTransactions}";
  
  }
  
  // Queries a list of GetEventsByCreationNumber items.
  rpc GetEventsByCreationNumber (QueryGetEventsByCreationNumberRequest) returns (QueryGetEventsByCreationNumberResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_events_by_creation_number/{header}/{address}/{creationNumber}/{limit}/{start}";
  
  }
  
  // Queries a list of GetEventsByEventHandle items.
  rpc GetEventsByEventHandle (QueryGetEventsByEventHandleRequest) returns (QueryGetEventsByEventHandleResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_events_by_event_handle/{header}/{address}/{eventHandle}/{fieldName}/{limit}/{start}";
  
  }
  
  // Queries a list of GetLedgerInfo items.
  rpc GetLedgerInfo (QueryGetLedgerInfoRequest) returns (QueryGetLedgerInfoResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_ledger_info/{header}";
  
  }
  
  // Queries a list of GetTransactions items.
  rpc GetTransactions (QueryGetTransactionsRequest) returns (QueryGetTransactionsResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_transactions/{header}/{limit}/{start}";
  
  }
  
  // Queries a list of GetTransactionByHash items.
  rpc GetTransactionByHash (QueryGetTransactionByHashRequest) returns (QueryGetTransactionByHashResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_transaction_by_hash/{header}/{txnHash}";
  
  }
  
  // Queries a list of GetWaitTransactionByHash items.
  rpc GetWaitTransactionByHash (QueryGetWaitTransactionByHashRequest) returns (QueryGetWaitTransactionByHashResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_wait_transaction_by_hash/{header}/{txnHash}";
  
  }
  
  // Queries a list of GetTransactionByVersion items.
  rpc GetTransactionByVersion (QueryGetTransactionByVersionRequest) returns (QueryGetTransactionByVersionResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_transaction_by_version/{header}/{txnVersion}";
  
  }
  
  // Queries a list of GetAccountTransaction items.
  rpc GetAccountTransaction (QueryGetAccountTransactionRequest) returns (QueryGetAccountTransactionResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_account_transaction/{header}/{address}/{limit}/{start}";
  
  }
  
  // Queries a list of EstimateGasPrice items.
  rpc EstimateGasPrice (QueryEstimateGasPriceRequest) returns (QueryEstimateGasPriceResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/estimate_gas_price/{header}";
  
  }
  
  // Queries a list of SubmitBatchTransaction items.
  rpc SubmitBatchTransaction (QuerySubmitBatchTransactionRequest) returns (QuerySubmitBatchTransactionResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/submit_batch_transaction"
      body: "*"
    };
  
  }
  
  // Queries a list of SimulateTransaction items.
  rpc SimulateTransaction (QuerySimulateTransactionRequest) returns (QuerySimulateTransactionResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/simulate_transaction"
      body: "*"
    };
  
  }
  
  // Queries a list of EncodeSubmission items.
  rpc EncodeSubmission (QueryEncodeSubmissionRequest) returns (QueryEncodeSubmissionResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/encode_submission"
      body: "*"
    };
  
  }
  
  // Queries a list of GetTransactionByCount items.
  rpc GetTransactionByCount (QueryGetTransactionByCountRequest) returns (QueryGetTransactionByCountResponse) {
    option (google.api.http).get = "/aptcaller/aptcaller/get_transaction_by_count/{count}";
  
  }
  
  // Queries a list of ViewFunction items.
  rpc ViewFunction (QueryViewFunctionRequest) returns (QueryViewFunctionResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/view_function"
      body: "*"
    };
  
  }
  
  // Queries a list of GetTableItem items.
  rpc GetTableItem (QueryGetTableItemRequest) returns (QueryGetTableItemResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/get_table_item"
      body: "*"
    };
  
  }
  
  // Queries a list of GetRawTableItem items.
  rpc GetRawTableItem (QueryGetRawTableItemRequest) returns (QueryGetRawTableItemResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/get_raw_table_item"
      body: "*"
    };
  }
  
  // Queries a list of AptosIndexer items.
  rpc AptosIndexer (QueryAptosIndexerRequest) returns (QueryAptosIndexerResponse) {
    option (google.api.http) = {
      post: "/aptcaller/aptcaller/aptos_indexer"
      body: "*"
    };
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetAccountRequest {
  string header          = 1;
  string address = 2;
  string ledgerVersion = 3;
}

message QueryGetAccountResponse {
  AptRes aptRes = 1;
}

message QueryGetAccountResourcesRequest {
  string header          = 1;
  string address       = 2;
  string ledgerVersion = 3;
  string limit         = 4;
  string start         = 5;
}

message QueryGetAccountResourcesResponse {
  AptRes aptRes = 1;
}

message QueryGetAccountModulesRequest {
  string header          = 1;
  string address       = 2;
  string ledgerVersion = 3;
  string limit         = 4;
  string start         = 5;
  
}

message QueryGetAccountModulesResponse {
  AptRes aptRes = 1;
}

message QueryGetAccountResourceRequest {
  string header        = 1;
  string address       = 2;
  string resourceType  = 3;
  string ledgerVersion = 4;
 
}

message QueryGetAccountResourceResponse {
  AptRes aptRes = 1;
}

message QueryGetAccountModuleRequest {
  string header        = 1;
  string address       = 2;
  string moduleName    = 3;
  string ledgerVersion = 4;
 
}

message QueryGetAccountModuleResponse {
  AptRes aptRes = 1;
}

message QueryGetBlockByHeightRequest {
  string header          = 1;
  string blockHeight      = 2;
  uint64 withTransactions = 3;
}

message QueryGetBlockByHeightResponse {
  AptRes aptRes = 1;
}

message QueryGetBlockByVersionRequest {
  string header          = 1;
  string version          = 2;
  uint64 withTransactions = 3;
}

message QueryGetBlockByVersionResponse {
  AptRes aptRes = 1;
}

message QueryGetEventsByCreationNumberRequest {
  string header          = 1;
  string address        = 2;
  string creationNumber = 3;
  string limit          = 4;
  string start          = 5;
}

message QueryGetEventsByCreationNumberResponse {
  AptRes aptRes = 1;
}

message QueryGetEventsByEventHandleRequest {
  string header          = 1;
  string address     = 2;
  string eventHandle = 3;
  string fieldName   = 4;
  string limit       = 5;
  string start       = 6;
}

message QueryGetEventsByEventHandleResponse {
  AptRes aptRes = 1;
}

message QueryGetLedgerInfoRequest {
  string header          = 1;
}

message QueryGetLedgerInfoResponse {
  AptRes aptRes = 1;
}

message QueryGetTransactionsRequest {
  string header          = 1;
  string limit = 2;
  string start = 3;
}

message QueryGetTransactionsResponse {
  AptRes aptRes = 1;
}

message QueryGetTransactionByHashRequest {
  string header          = 1;
  string txnHash = 2;
}

message QueryGetTransactionByHashResponse {
  AptRes aptRes = 1;
}

message QueryGetWaitTransactionByHashRequest {
  string header          = 1;
  string txnHash = 2;
}

message QueryGetWaitTransactionByHashResponse {
  AptRes aptRes = 1;
}

message QueryGetTransactionByVersionRequest {
  string header          = 1;
  string txnVersion = 2;
}

message QueryGetTransactionByVersionResponse {
  AptRes aptRes = 1;
}

message QueryGetAccountTransactionRequest {
  string header          = 1;
  string address = 2;
  string limit   = 3;
  string start   = 4;
}

message QueryGetAccountTransactionResponse {
  AptRes aptRes = 1;
}

message QueryEstimateGasPriceRequest {
  string header          = 1;
}

message QueryEstimateGasPriceResponse {
  AptRes aptRes = 1;
}

message QuerySubmitBatchTransactionRequest {
  string header          = 1;
  string body            = 2;
}

message QuerySubmitBatchTransactionResponse {
  AptRes aptRes = 1;
}

message QuerySimulateTransactionRequest {
  string header                  = 1;
  string body                    = 2;
  uint64 gasUnitPrice            = 3;
  uint64 maxGasAmount            = 4;
  uint64 prioritizedGasUnitPrice = 5;
}

message QuerySimulateTransactionResponse {
  AptRes aptRes = 1;
}

message QueryEncodeSubmissionRequest {
  string header          = 1;
  string body            = 2;
}

message QueryEncodeSubmissionResponse {
  AptRes aptRes = 1;
}

message QueryGetTransactionByCountRequest {
  uint64 count = 1;
}

message QueryGetTransactionByCountResponse {
  AptRes aptRes = 1;
}

message QueryViewFunctionRequest {
  string header          = 1;
  string body            = 2;
  string ledgerVersion   = 3;
}

message QueryViewFunctionResponse {
  AptRes aptRes = 1;
}

message QueryGetTableItemRequest {
  string header          = 1;
  string tableHandle   = 2;
  string body          = 3;
  string ledgerVersion = 4;
}

message QueryGetTableItemResponse {
  AptRes aptRes = 1;
}

message QueryGetRawTableItemRequest {
  string header           = 1;
  string tableHandle      = 2;
  string body             = 3;
  string ledgerVersion    = 4;
}

message QueryGetRawTableItemResponse {
  AptRes aptRes = 1;
}

message QueryAptosIndexerRequest {
  string body          = 1;
}

message QueryAptosIndexerResponse {
  AptRes aptRes = 1;
}

